<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>cz.alois-seckar.java</groupId>
    <artifactId>JavaDemos</artifactId>
    <version>25.0</version>
    <packaging>jar</packaging>
    
    <properties>
        <java.version>25</java.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>25</maven.compiler.source>
        <maven.compiler.target>25</maven.compiler.target>
    </properties>
    
    <dependencies>
        <dependency>
            <!-- for simplier getter/setter/constructor declarations -->
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.42</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <!-- for reading data from JSON files -->
            <groupId>com.google.code.gson</groupId>
            <artifactId>gson</artifactId>
            <version>2.13.2</version>
            <scope>compile</scope>
        </dependency>
    </dependencies>
    
    <build>
        <plugins>
            <plugin>
                <!-- responsible for performing .jar build -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.14.1</version>
                <configuration>
                    <source>25</source>
                    <target>25</target>
                    <release>25</release>
                    <compilerArgs>
                        <!-- allows 'preview' features -->
                        <arg>--enable-preview</arg>
                        <!-- allows newest 'incubator' features -->
                        <arg>--add-modules=jdk.incubator.vector</arg>
                    </compilerArgs>
                </configuration>
            </plugin>
            <plugin>
                <!-- for building .jar including all dependencies -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.1</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <transformers>
                        <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                            <mainClass>org.javademos.Main</mainClass>
                        </transformer>
                    </transformers>
                    <!-- do not create backup of the original JAR -->
                    <outputFile>${project.build.directory}/${project.artifactId}-${project.version}.jar</outputFile>
                    <!-- do not create a dependency-reduced POM -->
                    <createDependencyReducedPom>false</createDependencyReducedPom>
                    <!-- exclude overlapping files from dependencies -->
                    <filters>
                        <filter>
                            <artifact>*:*</artifact>
                            <excludes>
                                <exclude>META-INF/versions/9/module-info.class</exclude>
                                <exclude>META-INF/MANIFEST.MF</exclude>
                            </excludes>
                        </filter>
                    </filters>
                </configuration>
            </plugin>
            <plugin>
                <!-- responsible for generating Javadocs in HTML format -->
                <!-- standalone command: mvn clean javadoc:javadoc -->
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-javadoc-plugin</artifactId>
                <version>3.12.0</version>
                <configuration>
                    <source>25</source>
                    <additionalOptions>
                        <!-- allows 'preview' features -->
                        <additionalOption>--enable-preview</additionalOption>
                        <!-- allows newest 'incubator' features -->
                        <additionalOption>--add-modules=jdk.incubator.vector</additionalOption>
                        <!-- to skip errors for lombok-generated constructors -->
                        <additionalOption>-Xdoclint:none</additionalOption>
                    </additionalOptions>
                </configuration>
            </plugin>
        </plugins>
    </build>
    
</project>